CREATE TABLE MN_POS_CORP
(
    `POS_CORP_PID` BIGINT NOT NULL AUTO_INCREMENT COMMENT '포스_업체_순번',
    `ECLL_CORP_SE_CODE` VARCHAR(1) NOT NULL COMMENT '총판_업체_구분_코드',
    `CORP_SE_CODE` VARCHAR(1) COMMENT '업체_구분_코드',
    `CORP_CODE` VARCHAR(7) NOT NULL COMMENT '업체_코드',
    `VAN_CORP_CODE` VARCHAR(7) COMMENT '밴사_코드',
    `HIGH_CORP_CODE` VARCHAR(7) COMMENT '상위_업체_코드',
    `CORP_NM` VARCHAR(50) NOT NULL COMMENT '업체_명',
    `REP_NM` VARCHAR(50) COMMENT '대표자_명',
    `CORP_NO` VARCHAR(20) COMMENT '사업자_번호',
    `COM_NM` VARCHAR(50) COMMENT '상호_명',
    `CORP_TYPE_NM` VARCHAR(50) COMMENT '업태_명',
    `CORP_TELNO` VARCHAR(20) NOT NULL COMMENT '전화번호',
    `CORP_CELNO` VARCHAR(20) NOT NULL COMMENT '휴대폰번호',
    `CORP_FAXNO` VARCHAR(20) COMMENT '팩스번호',
    `INSTL_PSBLT_AT` VARCHAR(1) NOT NULL COMMENT '설치_가능_여부',
    `USE_AT` VARCHAR(1) NOT NULL COMMENT '사용_여부',
    `EDCTN_AT` VARCHAR(1) COMMENT '교육_여부',
    `CORP_ADRES` VARCHAR(100) COMMENT '업체_주소',
    `CORP_NOTE` VARCHAR(400) COMMENT '비고',
    `MNTHL_CRTF_SE_CODE` VARCHAR(1) DEFAULT 'N' COMMENT '월_인증_구분_코드',
    `ASP_MNTHL_CRTF_CNT` INT(11) DEFAULT '0' COMMENT 'ASP_월_인증_수량',
    `ASP_MNTHL_CRTF_PRICE` INT(11) DEFAULT '0' COMMENT 'ASP_월_인증_금액',
    `LOCAL_MNTHL_CRTF_CNT` INT(11) DEFAULT '0' COMMENT 'LOCAL_월_인증_수량',
    `LOCAL_MNTHL_CRTF_PRICE` INT(11) DEFAULT '0' COMMENT 'LOCAL_월_인증_금액',
    `CREATOR` VARCHAR(100) NOT NULL COMMENT '작성자',
    `CREATED_AT` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '생성시간',
    `UPDATER` VARCHAR(100) NOT NULL COMMENT '수정자',
    `UPDATED_AT` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '변경시간'
    , PRIMARY KEY (POS_CORP_PID)
    , INDEX idx_mn_pos_corp_1 (`CORP_CODE`)
    , INDEX idx_mn_pos_corp_2 (`CREATED_AT`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4